[tool.poetry]
name = "flask-mongo"
version = "0.1.0"
description = ""
authors = ["DewofyourYouth <jacobshore@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pymongo = "^3.11.0"
python_dotenv = "^0.14.0"
flask-wtf = "^0.14.3"
flask-login = "^0.5.0"
Flask-PyMongo = "^2.3.0"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
rope = "^0.18.0"
black = "^20.8b1"
bpython = "^0.20"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
